Fixed alignment issue in CSS

--- a/src/ui-components/ProductOverview.css
+++ b/src/ui-components/ProductOverview.css
@@ -1,4 +1,6 @@
 .ProductOverview {
+  margin-left: -1rem;
+  margin-right: -1rem;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   gap: 2rem;
